Module 2 Assignment - OK

--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,1 +1,37 @@
- 
+ <!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Module 2 Assignment</title>
+<link rel="stylesheet" href="css/style.css">
+<style type="text/css"></style>
+</head>
+<body>
+
+<h1>Our Menu</h1>
+
+
+	 <div class="col-lg-4 col-md-6 col-sm-12">
+		  <div class="container">
+		  	<h3 id="item1">Chicken</h3>
+		  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis hendrerit ipsum, ac tempor velit molestie ut. Donec ullamcorper cursus sapien ut ultrices. In lobortis id nisi ac elementum. Vivamus finibus quam quis diam varius, non rutrum eros tempus.</p>
+		  </div>
+	 </div>
+
+	 <div class="col-lg-4 col-md-6 col-sm-12">
+		  <div class="container">
+		  	<h3 id="item2">Beef</h3>
+		  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis hendrerit ipsum, ac tempor velit molestie ut. Donec ullamcorper cursus sapien ut ultrices. In lobortis id nisi ac elementum. Vivamus finibus quam quis diam varius, non rutrum eros tempus.</p>
+		  </div>
+	</div>
+	 
+	 <div class="col-lg-4 col-md-12 col-sm-12">
+		  <div class="container">
+		  	<h3 id="item3">Sushi</h3>
+		  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis hendrerit ipsum, ac tempor velit molestie ut. Donec ullamcorper cursus sapien ut ultrices. In lobortis id nisi ac elementum. Vivamus finibus quam quis diam varius, non rutrum eros tempus.</p>
+		  </div>
+	</div>
+
+</body>
+</html>
