--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -6,13 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <title>Bootstrap Starter Page</title>
+    <title>Assignment 3 Solution - Italo Rossi</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand pull-left">
+            <a href="index.html"><h1>Food, LLC</h1></a>
+          </div>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
 
-  <h1>Hello Coursera!</h1>
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right text-center visible-xs">
+            <li>
+              <a href="#"> Chicken</a>
+            </li>
+            <li>
+              <a href="#"> Beef</a>
+            </li>
+            <li>
+              <a href="#"> Sushi</a>
+            </li>
+          </ul><!-- #nav-list -->
+      </div>
+    </nav>
+  </header>
+
+  <div class="container">
+    <span class="text-center"><h2>Our Menu</h2></span>
+    <div class="col-xs-12 main-content">
+      <h3 class="text-center">Chicken</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit neque nulla. Cras pretium molestie lacus, a tempor risus cursus non. Sed commodo enim eu velit fermentum fringilla. Nam consequat sem id quam tristique sodales. Morbi finibus accumsan nunc, nec sagittis diam tempus at. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed vitae sagittis nulla, eu tempus mauris. Maecenas non mattis felis. Integer porta suscipit lectus. Suspendisse sed facilisis enim, ac ultricies arcu. Donec auctor urna a elit scelerisque malesuada. Cras suscipit neque in libero suscipit tempor.</p>
+
+      <p>Cras scelerisque lacus a est posuere viverra. Duis eleifend dictum massa et ultrices. Vestibulum efficitur leo sagittis, bibendum tortor in, viverra ligula. Vestibulum vel tincidunt orci. Donec dapibus aliquet ullamcorper. Vivamus tristique lorem hendrerit, hendrerit urna eget, fringilla justo. Pellentesque non elit id velit fermentum luctus. Mauris malesuada condimentum felis vitae porttitor.</p>
+
+      <p>Cras nec massa eu mauris suscipit porta. Etiam vulputate nunc a nulla varius, non scelerisque quam consectetur. Praesent vulputate a leo nec lacinia. Aliquam volutpat luctus accumsan. Suspendisse vitae venenatis ex, in scelerisque nisl. Praesent vehicula dui in leo eleifend, auctor ultricies odio tempor. Quisque tincidunt urna quis maximus tincidunt. Duis vestibulum placerat placerat. Aenean vulputate molestie ipsum, vitae congue urna tempus elementum. In sit amet rhoncus felis. Integer pellentesque ornare nisi nec posuere. Duis placerat non mi sed mattis. Nulla sed arcu fermentum urna pretium consequat et non ex. Curabitur cursus id mauris eu mattis.</p>
+
+      <p>Suspendisse placerat non leo eget lacinia. Duis aliquam ex ipsum, non aliquet risus feugiat quis. Nullam scelerisque volutpat turpis. Ut luctus lacinia sem vitae venenatis. Vestibulum eu sollicitudin nisl. Donec pharetra porta ante a auctor. Quisque ultricies ante sed massa tristique semper eget quis justo. Aliquam mollis ullamcorper orci, in mollis mauris molestie a.</p>
+
+      <p>In in scelerisque nisi, id mattis nibh. Curabitur id felis lectus. Aliquam cursus interdum tempor. Nunc hendrerit eu dui a lobortis. Proin tellus arcu, mattis nec facilisis nec, maximus vel lorem. Ut condimentum cursus libero, sodales commodo lectus fringilla et. Fusce nibh purus, commodo at velit et, dapibus lacinia nisi. Nunc ipsum mi, hendrerit sed ligula sed, sagittis pharetra neque. Proin elementum tempor tincidunt. Cras vitae dictum tellus.</p>
+
+      <p>Aenean semper nulla non rutrum rhoncus. Nulla fringilla aliquam sapien a tempus. Suspendisse in augue malesuada elit congue porta vel in ligula. Fusce vulputate metus vel augue accumsan tincidunt. Proin ut quam eu massa blandit posuere ac sed nulla. Integer aliquam sit amet magna ut consectetur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc sodales metus faucibus quam hendrerit, a euismod lectus laoreet. Pellentesque id massa eu metus tincidunt euismod. Vivamus sed laoreet dui. Quisque at lacus at lorem efficitur convallis. Vestibulum scelerisque arcu ut augue pharetra ultrices.</p>
+
+      <p>Praesent varius cursus dictum. Cras egestas tempus tellus, eget lobortis ex ultrices nec. In eget fermentum nunc. Suspendisse facilisis quam ac vulputate consectetur. Morbi interdum neque eu lorem rhoncus imperdiet. Aliquam id mattis tellus. Donec lorem lectus, eleifend id venenatis ut, condimentum sed magna. Sed malesuada lorem dui, ut vulputate ante pharetra sed. Nullam sagittis eros nec eleifend interdum. Nulla aliquet laoreet facilisis. Maecenas dapibus lacinia ante, eget feugiat nunc facilisis quis. Etiam eu auctor est, eu feugiat libero. Suspendisse aliquet tortor nisi, sit amet egestas ipsum faucibus sit amet. Nullam mattis sem justo, in euismod augue egestas nec. Duis id nisi mi.</p>
+
+      <p>Nulla imperdiet arcu ut tristique rhoncus. Duis posuere faucibus nisl nec ultrices. Curabitur et tempus arcu. Maecenas imperdiet velit ut nibh auctor commodo. Integer velit turpis, scelerisque et tempus eget, rutrum ac sapien. Fusce molestie sem vitae fringilla rutrum. Cras in elit tortor. Donec suscipit diam nec quam dapibus, at semper lectus consectetur. Nam porttitor porta diam sit amet pharetra. Donec eget massa ut magna porttitor porttitor. Praesent at pharetra nibh, at bibendum elit. Proin quis porttitor dolor.</p>
+
+      <p>Etiam sit amet ornare massa, et finibus magna. Morbi ut turpis ante. Fusce mattis finibus mi sed porta. Praesent lacus nisl, vestibulum nec viverra ullamcorper, maximus id neque. Aliquam eleifend pellentesque feugiat. Mauris vitae diam leo. Phasellus ut ullamcorper leo. Etiam bibendum nisl magna, ac egestas dui sagittis ut. Nam efficitur diam arcu. Maecenas consectetur tempor ultrices. Nam at semper turpis, at blandit purus. Suspendisse ipsum ante, feugiat a pretium vitae, interdum quis quam. Etiam venenatis mauris nec cursus rhoncus. Sed vel risus enim. Morbi mollis lobortis elit.</p>
+
+      <p>Mauris id ipsum nec libero pretium rhoncus. In hac habitasse platea dictumst. Sed sollicitudin, lorem ut auctor rhoncus, magna massa ornare enim, ac tincidunt nibh metus sit amet felis. Nam quis accumsan sapien. Proin auctor sodales dictum. Sed congue mi eu dictum euismod. Nulla dolor ex, ultrices id convallis ac, ultrices sit amet mi. Donec sit amet porttitor odio. Aenean lobortis metus feugiat nunc luctus, sed venenatis augue dapibus. Suspendisse id egestas ante. Proin at metus velit. Ut lectus dui, viverra ut dolor id, blandit lobortis ligula. Donec id tristique orci. In sem risus, vehicula ac dui sit amet, tristique tincidunt lorem.</p>
+    </div>
+  </div>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
